--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -360,3 +360,12 @@ textarea {
 /* =============
     Footer
 ============= */
+/* =============
+    Hero
+============= */
+/* =============
+    Hero 2
+============= */
+/* =============
+    whats new
+============= */
