--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -3,3 +3,24 @@
 ============= */
 
 
+.header-footer-grid{
+    display: grid;
+    grid-template-columns: 16px auto 16px;
+    grid-template-areas: ". header-footer .";
+
+
+    >div{
+        grid-area: header-footer;
+    }
+}
+
+
+
+.large-images{
+    width: 100%;
+}
+
+.logo{
+    width: 100px
+}
+
