--- a/dev/scss/sections/_heroes.scss
+++ b/dev/scss/sections/_heroes.scss
@@ -3,7 +3,14 @@
 ============= */
 
 #hero{
-
+     
+    display: grid;
+    grid-template-columns: 16px auto 16px;
+    grid-template-areas: ". hero .";
+    
+        >div{
+        grid-area: hero;
+        }
 }
 
 
