--- a/dev/scss/sections/_whatsnew.scss
+++ b/dev/scss/sections/_whatsnew.scss
@@ -3,11 +3,19 @@
 ============= */
 
 #whatsnew{
-display: grid;
-grid-template-columns: 16px auto 16px;
-grid-template-areas: ". whatsnew .";
-
-    >div{
-    grid-area: whatsnew;
-    }
+        ul{
+            li{
+                img{
+                    width: 100%;
+                }
+                section{
+                    display: grid;
+                    grid-template-columns: 16px auto 16px;
+                    grid-template-areas: ". whatsnew .";
+                    >div{
+                        grid-area: whatsnew;
+                    }
+                }
+            }
+        }
 }
