--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -3,7 +3,7 @@
 ============= */
 
 
-.header-footer-grid{
+/*.header-footer-grid{
     display: grid;
     grid-template-columns: 16px auto 16px;
     grid-template-areas: ". header-footer .";
@@ -13,7 +13,7 @@
         grid-area: header-footer;
     }
 }
-
+*/
 
 
 .large-images{
