--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -3,5 +3,11 @@
 ============= */
 
 #footer{
+    display: grid;
+    grid-template-columns: 16px auto 16px;
+    grid-template-areas: ". footer .";
 
+   >div{
+        grid-area: footer; 
+    }
 }
