--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -395,12 +395,12 @@ textarea {
 /* =============
     Footer
 ============= */
-#footer {
+footer {
   display: grid;
   grid-template-columns: 16px auto 16px;
   grid-template-areas: ". footer .";
 }
-#footer > div {
+footer > div {
   grid-area: footer;
 }
 
