--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -346,6 +346,14 @@ template {
   width: 100px;
 }
 
+ul {
+  padding: 0;
+  margin: 0;
+}
+ul li {
+  list-style: none;
+}
+
 /* =============
     Typography
 ============= */
