--- a/dev/scss/sections/_heroes.scss
+++ b/dev/scss/sections/_heroes.scss
@@ -29,9 +29,11 @@
 
 
 /* =============
-    Hero 2
+    gallery
 ============= */
 
-#hero-2{
-
+#gallery{
+    display: grid;
+    grid-template-columns: (repeat, 1fr);
+    grid-template-areas: "image";
 }
