--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -21,3 +21,5 @@
 // Sections Styles
 @import "sections/heroes";
 @import "sections/whatsnew";
+@import "sections/underhero";
+@import "sections/gallery";
