--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -11,7 +11,9 @@
         >div {
             grid-area: logo-nav;
 
-            img {}
+            img {
+               
+            }
         }
 
     }
