--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -358,6 +358,18 @@ ul li {
   width: 20%;
 }
 
+.buttoncolor {
+  background-color: #CD2B29;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.searchbuttoncolor {
+  background-color: #CD2B29;
+}
+
 /* =============
     Typography
 ============= */
