--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -36,3 +36,15 @@ ul{
     width: 20%;
 }
 
+.buttoncolor{
+    background-color: #CD2B29;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+
+}
+
+.searchbuttoncolor{
+    background-color: #CD2B29;
+}
