--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -3,6 +3,7 @@
 ============= */
 
 footer {
+    background-color: #C9D2DA;
     display: grid;
     grid-template-columns: 16px auto 16px;
     grid-template-areas: ". footer .";
