--- a/dev/scss/sections/_heroes.scss
+++ b/dev/scss/sections/_heroes.scss
@@ -10,7 +10,7 @@
             background-color: fuchsia;
 
             #info-1{
-                background-color: red;
+                background-color: #9A1211;
                 color: white;
                 padding: 16px;
                 display: grid;
@@ -19,7 +19,7 @@
             }
 
             #info-2{
-                background-color: orange;
+                background-color: #CD2B29;
                 padding: 16px;
 
             }
