--- a/dev/scss/sections/_underhero.scss
+++ b/dev/scss/sections/_underhero.scss
@@ -5,7 +5,7 @@
     grid-area: ". underhero .";
     >div{
         grid-area: underhero;
-        background-color: green;
+        // background-color: green;
         ul{
             margin: 16px;
            
@@ -19,7 +19,7 @@
 
 
             li{
-                background-color: rgb(80, 80, 247);
+                background-color: #3D5A80;
                 padding: 16px;
                 margin-bottom: 16px;
                 color: white;
