image styles and footer

--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -23,12 +23,34 @@ footer {
             grid-template-columns: 70% auto;
             padding: 16px;
             grid-area: newsletter;
+
+            button{
+                margin-top: 16px;
+                border: none;
+            }
+
+
+            form{
+                input{
+                    width: 357px;
+                    background-color: #ADB5BD;
+                    border: none;
+                    padding: 16px 24px;
+                }
+            }
         }
 
         #socialmedia {
             grid-template-columns: 70% auto;
             padding: 16px;
             grid-area: socialmedia;
+           
+           
+            ul{
+                display: flex;
+                gap: 24px;
+
+            }
         }
 
         @include md{
