--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -360,14 +360,17 @@ ul li {
 
 .buttoncolor {
   background-color: #CD2B29;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  padding: 10px 24px;
+  color: white;
 }
 
 .searchbuttoncolor {
   background-color: #CD2B29;
+}
+
+.newheadline {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 27px;
 }
 
 /* =============
@@ -416,6 +419,14 @@ textarea {
 #search > div {
   grid-area: search;
 }
+#search > div form input {
+  border: none;
+}
+#search > div form button {
+  border: none;
+  height: 34px;
+  width: 43;
+}
 /* =============
     Footer
 ============= */
@@ -439,10 +450,24 @@ footer > div #newsletter {
   padding: 16px;
   grid-area: newsletter;
 }
+footer > div #newsletter button {
+  margin-top: 16px;
+  border: none;
+}
+footer > div #newsletter form input {
+  width: 357px;
+  background-color: #ADB5BD;
+  border: none;
+  padding: 16px 24px;
+}
 footer > div #socialmedia {
   grid-template-columns: 70% auto;
   padding: 16px;
   grid-area: socialmedia;
+}
+footer > div #socialmedia ul {
+  display: flex;
+  gap: 24px;
 }
 @media (min-width: 768px) {
   footer > div {
@@ -509,6 +534,10 @@ footer > div #socialmedia {
   grid-area: whatsnew;
   margin-bottom: 24px;
 }
+#whatsnew > div > h1 {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  color: #637275;
+}
 @media (min-width: 768px) {
   #whatsnew > div ul {
     display: grid;
@@ -570,7 +599,19 @@ footer > div #socialmedia {
   background-color: #3D5A80;
   padding: 16px;
   margin-bottom: 16px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
   color: white;
+}
+#underhero > div ul li img {
+  border-radius: 50%;
+  float: right;
+  margin-left: 16px;
+  border: 6px solid #F8F6E9;
+}
+#underhero > div ul li a {
+  margin-bottom: 16px;
 }
 
 /* =============
