--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -38,13 +38,16 @@ ul{
 
 .buttoncolor{
     background-color: #CD2B29;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-
+    padding: 10px 24px;
+    color: white;
 }
 
 .searchbuttoncolor{
     background-color: #CD2B29;
 }
+
+.newheadline{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 27px;
+}
+
