--- a/dev/scss/sections/_whatsnew.scss
+++ b/dev/scss/sections/_whatsnew.scss
@@ -8,9 +8,17 @@
     grid-template-areas: ". whatsnew .";
     // background-color: gray;
     width: 100%;
+
      >div{
         grid-area: whatsnew;
         margin-bottom: 24px;
+
+
+        // whats new text
+        >h1{
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            color: #637275;
+        }
 
         ul{ 
             @include md{
