--- a/dev/scss/sections/_underhero.scss
+++ b/dev/scss/sections/_underhero.scss
@@ -34,6 +34,8 @@
                 color: white;
 
                 img{
+                    width: 100px;
+                    height: 100px;
                     border-radius: 50%;
                     float: right;
                     margin-left: 16px;
