--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -24,7 +24,7 @@ footer {
             padding: 16px;
             grid-area: newsletter;
 
-            button{
+            a{
                 padding: 16px 24px;
                 border: none;
             }
