--- a/dev/scss/sections/_whatsnew.scss
+++ b/dev/scss/sections/_whatsnew.scss
@@ -13,6 +13,12 @@
         grid-area: whatsnew;
         margin-bottom: 24px;
 
+        img{
+            width:50%;
+        }
+
+        }
+
 
         // whats new text
         >h1{
@@ -70,7 +76,3 @@
             grid-area: c5;
         }
     }
-   
-   
-
-}
