--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -530,6 +530,12 @@ footer > div #socialmedia ul {
   grid-template-areas: ". whatsnew .";
   width: 100%;
 }
+@media (min-width: 1440px) {
+  #whatsnew {
+    grid-template-columns: auto 1280px auto;
+    grid-template-areas: ". whatsnew .";
+  }
+}
 #whatsnew > div {
   grid-area: whatsnew;
   margin-bottom: 24px;
@@ -583,6 +589,12 @@ footer > div #socialmedia ul {
   display: grid;
   grid-template-columns: 16px auto 16px;
   grid-template-areas: ". underhero .";
+}
+@media (min-width: 1440px) {
+  #underhero {
+    grid-template-columns: auto 1280px auto;
+    grid-template-areas: ". underhero .";
+  }
 }
 #underhero > div {
   grid-area: underhero;
