--- a/dev/scss/sections/_underhero.scss
+++ b/dev/scss/sections/_underhero.scss
@@ -4,7 +4,10 @@
     grid-template-columns: 16px auto 16px;
     grid-template-areas: ". underhero .";
     
-
+    @include xxl{
+        grid-template-columns: auto 1280px auto;
+        grid-template-areas: ". underhero .";
+      }
    
     >div{
         
