--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -37,13 +37,13 @@ ul{
 }
 
 .buttoncolor{
-    background-color: #CD2B29;
+    background-color: var(--redmain);
     padding: 10px 24px;
     color: white;
 }
 
 .searchbuttoncolor{
-    background-color: #CD2B29;
+    background-color: var(--redmain);
 }
 
 .newheadline{
