--- a/dev/scss/sections/_underhero.scss
+++ b/dev/scss/sections/_underhero.scss
@@ -28,7 +28,7 @@
 
 
             li{
-                background-color: #3D5A80;
+                background-color: var(--navy);
                 padding: 16px;
                 margin-bottom: 16px;
                 display: flex;
