--- a/dev/scss/helpers/_variables.scss
+++ b/dev/scss/helpers/_variables.scss
@@ -23,5 +23,11 @@ $screen-xxl-min: 1440px;
 :root {
   --black: #000000;
   --white: #ffffff;
+  --redmain: #CD2B29;
+  --reddark: #9A1211;
+  --navy: #3D5A80;
+  --greylight: #D5DDE0;
+  --greymid: #C9D2DA;
+
 }
 
