--- a/dev/scss/sections/_whatsnew.scss
+++ b/dev/scss/sections/_whatsnew.scss
@@ -54,7 +54,7 @@
 
             
             li{
-                background-color: #D5DDE0;
+                background-color: var(--greylight);
                 text-align: center;
                 padding: 16px;
                 margin-top: 16px;
