--- a/dev/scss/sections/_whatsnew.scss
+++ b/dev/scss/sections/_whatsnew.scss
@@ -58,6 +58,12 @@
                 text-align: center;
                 padding: 16px;
                 margin-top: 16px;
+
+                img{
+                    padding: none;
+                }
+
+
                 
             }    
         }
