--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -545,9 +545,6 @@ footer > div #socialmedia ul {
   grid-area: whatsnew;
   margin-bottom: 24px;
 }
-#whatsnew > div img {
-  width: 50%;
-}
 #whatsnew > h1 {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   color: #637275;
@@ -569,12 +566,17 @@ footer > div #socialmedia ul {
   }
 }
 #whatsnew ul li {
+  align-content: center;
+  justify-content: center;
   background-color: var(--greylight);
   text-align: center;
-  padding: 16px;
-  margin-top: 16px;
+  padding-bottom: 24px;
+}
+#whatsnew ul li a {
+  width: 24px;
 }
 #whatsnew ul li img {
+  width: 100%;
   padding: none;
 }
 #whatsnew #c1 {
