--- a/dev/scss/sections/_whatsnew.scss
+++ b/dev/scss/sections/_whatsnew.scss
@@ -18,9 +18,9 @@
         grid-area: whatsnew;
         margin-bottom: 24px;
 
-        img{
-            width:50%;
-        }
+        // img{
+        //     width:50%;
+        // }
 
         }
 
@@ -32,6 +32,8 @@
         }
 
         ul{ 
+
+            
             @include md{
                 display: grid;
                 gap: 16px;
@@ -54,12 +56,24 @@
 
             
             li{
+              
+                align-content: center;
+                justify-content: center;
                 background-color: var(--greylight);
                 text-align: center;
-                padding: 16px;
-                margin-top: 16px;
+                padding-bottom: 24px ;
+                
+                a{
+                    width: 24px;
+                    
+                   
+                    
+                }
+                // padding: 16px;
+                // margin-top: 16px;
 
                 img{
+                    width: 100%;
                     padding: none;
                 }
 
