--- a/dev/scss/sections/_heroes.scss
+++ b/dev/scss/sections/_heroes.scss
@@ -13,14 +13,14 @@
                 background-color: var(--reddark);
                 color: white;
                 padding: 16px;
-                display: grid;
-                grid-template-columns: 70% auto;
+              
 
             }
 
             #info-2{
                 background-color: var(--redmain);
                 padding: 16px;
+                color: white;
 
             }
 
