--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -40,6 +40,7 @@ ul{
     background-color: var(--redmain);
     padding: 10px 24px;
     color: white;
+    display: inline-block;
 }
 
 .searchbuttoncolor{
