--- a/dev/scss/base/_typography.scss
+++ b/dev/scss/base/_typography.scss
@@ -2,8 +2,8 @@
     Typography
 ============= */
 
-// h1,h2,h3,h4,h5,p{
-//     margin: 0;
-//     padding: 0;
+h1,h2,h3,h4,h5,p{
+    margin: 0;
+    padding: 0;
 
-// }
+}
