--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -2,8 +2,8 @@
     Header
 ============= */
 
-#header {
-   
+header {
+   background-color: red;
     #logo-nav {
         display: grid;
         grid-template-columns: 16px auto 16px;
