--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -423,13 +423,12 @@ textarea {
 /* =============
     Header
 ============= */
-header {
-  background-color: red;
-}
 header #logo-nav {
   display: grid;
   grid-template-columns: 16px auto 16px;
   grid-template-areas: ". logo-nav .";
+  background-color: var(--greymid);
+  padding: 16px 0 24px;
 }
 header #logo-nav > div {
   grid-area: logo-nav;
@@ -438,6 +437,7 @@ header #logo-nav > div {
   display: grid;
   grid-template-columns: 16px auto 16px;
   grid-template-areas: ". search .";
+  padding: 16px 0;
 }
 #search > div {
   grid-area: search;
